syntax = "proto3";

package metalstack.io.accounting.api.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "metalstack/io/accounting/api/v1/common.proto";

option go_package = "pkg/apis/v1";

service PodService {
  rpc Added(PodReport) returns (Empty);
  rpc Modified(PodReport) returns (Empty);
  rpc Deleted(PodReport) returns (Empty);

  rpc Usage(ContainerUsageRequest) returns (ContainerUsageResponse);
}

message Container {
  string pod_name = 1;
  string pod_uuid = 2;
  string container_name = 3;
  string image = 4;
  string cpus = 5;
  string memory = 6;
}

message PodReport {
  KubernetesResourceReport kubernetes_report = 1;
  repeated Container containers = 2;
  repeated string annotations = 3;
}

message ContainerUsageRequest {
  UsageQuery query = 1;
  google.protobuf.StringValue namespace = 2;
  repeated string annotations = 3;
}

message ContainerUsageResponse {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
  repeated ContainerUsage usage = 3;
  ContainerUsageAccumuluated accumulated_usage = 4;
}

message ContainerUsage {
  string partition = 1;
  string tenant = 2;
  string projectid = 3;
  string clusterid = 4;
  string clustername = 5;
  string namespace = 6;
  string pod_uuid = 7;
  string pod_name = 8;
  google.protobuf.Timestamp pod_start = 9;
  google.protobuf.Timestamp pod_end = 10;
  string container_name = 11;
  google.protobuf.Duration lifetime = 12;
  string cpu_seconds = 13;
  string memory_seconds = 14;
  repeated string warnings = 15;
  string container_image = 16;
  repeated string annotations = 17;
  string projectname = 18;
  string tenantname = 19;
  string contractnumber = 20;
  string debtorid = 21;
}

message ContainerUsageAccumuluated {
  google.protobuf.Duration lifetime = 1;
  string cpu_seconds = 2;
  string memory_seconds = 3;
}
